# Google-test-introduction

./: CMakeLists.txt  README.md  build_and_test.py
tests/: death_tests.cpp  mock_example1.cpp  mock_example2.cpp  mock_example3.cpp  parameterized_tests.cpp  test.cpp  test_fixture_example.cpp
tests/mock_reference1/: database_interface.h  mock_database_interface.h  user_service.cpp  user_service.h  ut_user_service.cpp
tests/mock_reference2/: singleton_template.h  ut_user_service.cpp
